# Rust-exercices

./: Cargo.toml  README.md
src/: funcs.rs
src/ex/: ex001.rs  ex002.rs  ex003.rs  ex004.rs  ex005.rs  ex006.rs  ex007.rs  ex008.rs  ex009.rs  ex010.rs  ex011.rs  ex012.rs  ex013.rs  func.rs
