[package]
name = "exercicios"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "ex001"
path = "src/ex/ex001.rs"

[[bin]]
name = "ex002"
path = "src/ex/ex002.rs"

[[bin]]
name = "ex003"
path = "src/ex/ex003.rs"

[[bin]]
name = "ex004"
path = "src/ex/ex004.rs"

[[bin]]
name = "ex005"
path = "src/ex/ex005.rs"
[[bin]]
name = "ex006"
path = "src/ex/ex006.rs"

[[bin]]
name = "ex007"
path = "src/ex/ex007.rs"

[dependencies]
