[package]
name = "exercicios"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "ex001"
path = "src/ex/ex001.rs"

[[bin]]
name = "ex002"
path = "src/ex/ex002.rs"

[[bin]]
name = "ex003"
path = "src/ex/ex003.rs"

[[bin]]
name = "ex004"
path = "src/ex/ex004.rs"

[[bin]]
name = "ex005"
path = "src/ex/ex005.rs"
[[bin]]
name = "ex006"
path = "src/ex/ex006.rs"

[[bin]]
name = "ex007"
path = "src/ex/ex007.rs"

[[bin]]
name = "ex008"
path = "src/ex/ex008.rs"

[[bin]]
name = "ex009"
path = "src/ex/ex009.rs"

[[bin]]
name = "ex010"
path = "src/ex/ex010.rs"

[[bin]]
name = "ex011"
path = "src/ex/ex011.rs"

[[bin]]
name = "ex012"
path = "src/ex/ex012.rs"
[[bin]]
name = "ex013"
path = "src/ex/ex013.rs"

[dependencies]
dialoguer = "0.11.0"
